--- a/src/styles/AdminStyles.css
+++ b/src/styles/AdminStyles.css
@@ -22,7 +22,7 @@
     background: rgb(173, 172, 172) ;
     border: 1px solid black;
     margin: 10px;
-    width: 500px;
+    width: 90%;
     margin-right: auto;
     margin-left: auto;
   }
