--- a/src/styles/customHead.css
+++ b/src/styles/customHead.css
@@ -55,13 +55,14 @@ to {
   background: linear-gradient(
     to left,
     #ffffff,
-    #b4ddf1 10%,
+    #1b96d3 10%,
     #9dd3ef 20%,
     #9dd3ef 70%,
-    #b4ddf1 90%,
+    #1b96d3 90%,
     #ffffffed 100%
   );
   height: 1200px ;
+  min-width: 500px;
 }
 
 
