--- a/src/styles/style2.css
+++ b/src/styles/style2.css
@@ -40,3 +40,10 @@ ul.header li a:hover:not(.active) {
    
 }
 
+@media only screen and (width < 800px) {
+  .header > li:last-child {
+     float: left;
+     margin-left: 15px;
+  }
+}
+
