oprydning af kode + spise aftensmad

--- a/src/styles/userstyles.css
+++ b/src/styles/userstyles.css
@@ -2,7 +2,7 @@
     background: rgb(173, 172, 172) ;
     border: 1px solid black;
     margin: 10px;
-    width: 50%;
+    width: 40%;
     margin-right: auto;
     margin-left: auto;
   }
@@ -12,7 +12,26 @@
     background: rgb(173, 172, 172) ;
     border: 1px solid black;
     margin: 10px;
-    width: 50%;
+    width: 90%;
     margin-right: auto;
     margin-left: auto;
+  }
+
+  .MyBookingsBackground {
+      
+    border: 2px solid;
+    border-color: #1CA9D5;
+    background-color: #9dd3ef;
+    background: linear-gradient(
+      to left,
+      #ffffff,
+      #b4ddf1 10%,
+      #9dd3ef 20%,
+      #9dd3ef 70%,
+      #b4ddf1 90%,
+      #ffffffed 100%
+    );
+    height: 900px;
+    text-align: center;
+    width: 50%;
   }
